<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fcfcfc"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    android:id="@+id/cv_item"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/namaPeserta"
            fontPath="fonts/Poppins-SemiBold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/nama_peserta"
            android:textColor="#157EAE"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/umurPeserta"
            fontPath="fonts/Poppins-SemiBold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/namaPeserta"
            android:text="@string/umur_peserta"
            android:textColor="#157EAE"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            tools:ignore="MissingPrefix" />

            <TextView
                android:layout_below="@id/namaPeserta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/tahun"
                android:textColor="#157EAE"
                android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>